tinyc/test/bad/struct-as-bool-do.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    do break; while ( s );
    return 0;
}
